fix(employees): remove overflow-hidden and show again useLoading in EditPersonalForm

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -50,7 +50,7 @@ html {
 }
 
 body {
-  min-height: 100vh;
+  min-height: 100dvh;
   background: var(--background) !important;
 }
 
